# alat-download

./: 01-PRD.md  02-SDS.md  03-Database.md  04-API.md  05-BrowserExtension.md  06-UIUX.md  07-DownloadEngine.md  08-TorrentEngine.md  09-VideoEngine.md
vdm/src-tauri/: Cargo.toml  err.txt  output.txt  tauri.conf.json
vdm/src-tauri/capabilities/: default.json
vdm/src-tauri/downloads/: watch
vdm/src-tauri/migrations/: 20260706000001_initial_schema.sql
vdm/src-tauri/src/: events.rs  main.rs
vdm/src-tauri/src/commands/: download.rs  file.rs  mod.rs  notification.rs  queue.rs  scheduler.rs  settings.rs  statistics.rs
vdm/src-tauri/src/database/: mod.rs  models.rs  repository.rs
vdm/src-tauri/src/download_engine/: buffer_manager.rs  connection_manager.rs  disk_writer.rs  http_client.rs  integrity_checker.rs  mod.rs  resume_engine.rs  retry_engine.rs  segment_manager.rs  url_analyzer.rs  worker.rs
vdm/src-tauri/src/intelligence/: health_monitor.rs  intelligence_engine.rs  mod.rs  optimizer.rs  self_healing.rs
vdm/src-tauri/src/torrent_engine/: client.rs  mod.rs
vdm/src-tauri/src/torrent_engine/core/: dht.rs  magnet.rs  mod.rs  parser.rs  peer_manager.rs  piece_manager.rs  resume.rs  tracker.rs  verification.rs  worker.rs
vdm/src-tauri/src/torrent_engine/intelligence/: analyzer.rs  mod.rs  piece_picker.rs  self_healing.rs  smart_peer.rs
vdm/src-tauri/src/torrent_engine/monitoring/: diagnostics.rs  mod.rs  recovery.rs  statistics.rs
vdm/src-tauri/src/torrent_engine/performance/: bandwidth.rs  (+4 more)
vdm/src-tauri/src/video_engine/: extractor.rs  merger.rs  mod.rs
(+31 files in other folders)
