[package]
name = "vdm"
version = "0.1.0"
description = "Velocity Download Manager"
authors = ["Mustofa & ChatGPT"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "tls-rustls"] }
