[package]
name = "vdm"
version = "0.1.0"
description = "Velocity Download Manager"
authors = ["Mustofa & ChatGPT"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "tls-rustls"] }
bytes = "1.6"
futures-util = "0.3"
sha2 = "0.10"
tauri-plugin-notification = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
